--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - Love Letter</title>
+    <title>IAMMAITOAN</title>
     <link rel="stylesheet" href="./style.css">
 
 </head>
