--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
         <div class="dear">💌Dear.</div>
         <div class="letter">
 
-            <div class="scroll-area">
+            <br class="scroll-area">
+            <div style="text-align: center;">CỘNG HÒA XÃ HỘI CHỦ NGHĨA VIỆT NAM</div>
+            <div style="text-align: center;">ĐỘC LẬP - TỰ DO - HẠNH PHÚC</div>
+            <div style="text-align: center;">
                 <br>
                 Bức thư số 1!<br>
-                Nghe nói bên e đang thiếu vị trí "người chăm" nên anh xin ứng tuyển vị trí này!<br>
+                Bên e đang thiếu vị trí "người chăm" nên anh xin ứng tuyển vị trí này!<br>
+                Hiện nay thời điểm kinh tế khó khăn nên e nên duyệt chiếc CV nho nhỏ này cùng cùng mình vượt qua sóng
+                gió
+                </br>
+                <img src="https://img.meta.com.vn/Data/image/2022/02/08/nhung-cau-to-tinh-hay-10.jpg"
+                    style="width: 200px;" />
+                <br>
                 Điểm mạnh:<br>
                 + Biết nấu nướng.<br>
                 + Biết giữ lời hứa <br>
@@ -34,10 +43,10 @@
                 + Và nhiều điểm mạnh khác khi đơn này được duyệt.</br>
                 + Chăm chỉ <br />
                 <span class="date">2023. 09. 25</span>
-                </p>
             </div>
         </div>
-        <div class="from">From.🤲</div>
+    </div>
+    <div class="from">From.🤲</div>
     </div>
     <!-- partial -->
     <script src="./script.js"></script>
