--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <br>
                 Bức thư số 1!<br>
                 Bên e đang thiếu vị trí "người chăm" nên anh xin ứng tuyển vị trí này!<br>
-                Hiện nay thời điểm kinh tế khó khăn nên e nên duyệt chiếc CV nho nhỏ này cùng cùng mình vượt qua sóng
+                Hiện nay thời điểm kinh tế khó khăn em nên duyệt chiếc CV nho nhỏ này cùng cùng mình vượt qua sóng
                 gió
                 </br>
                 <img src="https://img.meta.com.vn/Data/image/2022/02/08/nhung-cau-to-tinh-hay-10.jpg"
