--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div style="text-align: center;">
                 <br>
                 Bức thư số 1!<br>
-                Bên e đang thiếu vị trí "người chăm" nên anh xin ứng tuyển vị trí này!<br>
+                Bên em đang thiếu vị trí "người chăm" nên anh xin ứng tuyển vị trí này!<br>
                 Hiện nay thời điểm kinh tế khó khăn em nên duyệt chiếc CV nho nhỏ này cùng cùng mình vượt qua sóng
                 gió
                 </br>
